--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <groupId>net.oschina.jmind</groupId>
         <artifactId>jmind-parent-pom</artifactId>
-        <groupId>jmind</groupId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jmind-hyena</artifactId>
@@ -25,7 +25,11 @@
             <artifactId>netty</artifactId>
         </dependency>
         <dependency>
-            <groupId>jmind</groupId>
+            <groupId>net.oschina.jmind</groupId>
+            <artifactId>jmind-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.oschina.jmind</groupId>
             <artifactId>jmind-core</artifactId>
         </dependency>
 
@@ -39,15 +43,11 @@
             <artifactId>fastjson</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
-            <groupId>jmind</groupId>
-            <artifactId>jmind-core-support</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>jmind</groupId>
+            <groupId>net.oschina.jmind</groupId>
             <artifactId>jmind-redis</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -77,18 +77,22 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>9.4.0.RC1</version>
+            <version>9.4.0.RC3</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
-            <version>9.4.0.RC1</version>
+            <version>9.4.0.RC3</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
-            <version>9.4.0.RC1</version>
+            <version>9.4.0.RC3</version>
+        </dependency>
+        <dependency>
+            <groupId>net.oschina.jmind</groupId>
+            <artifactId>jmind-base</artifactId>
         </dependency>
 
 
