--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,20 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.perf4j</groupId>-->
-            <!--<artifactId>perf4j</artifactId>-->
-        <!--</dependency>-->
-        <dependency>
+
+       <!-- <dependency>
             <groupId>org.jboss.netty</groupId>
             <artifactId>netty</artifactId>
+        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.21.Final</version>
         </dependency>
+
+
         <dependency>
             <groupId>net.oschina.jmind</groupId>
             <artifactId>jmind-base</artifactId>
@@ -44,12 +50,12 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
+      <!--  <dependency>
             <groupId>net.oschina.jmind</groupId>
             <artifactId>jmind-redis</artifactId>
             <version>2.0.0</version>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
